<resources>
	<string name="app_name">DTake</string>
	<string name="ok_text">You can take a %1$s. %2$s</string>
	<string name="ko_text">You can\'t take a %1$s. %2$s</string>
	<string name="take">Take</string>
	<string name="take_anyway">Take anyway, but you should wait…</string>
	<string name="title_activity_settings">Settings</string>

	<string name="settings">Settings</string>
	<string name="quit_service">Quit Service</string>
	<string name="pill_taken">%s taken!</string>
	<string name="no_taken">No %s was taken!</string>
	<string name="last_pill_taken">"Last %1$s was taken %2$s ago!"</string>
	<plurals name="number_pill_taken">
		<item quantity="one">%2$s taken today: %1$d.</item>
		<item quantity="other">%2$s taken today: %1$d.</item>
	</plurals>
	<string name="title_activity_dtake">DTake</string>

	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>

	<string name="action_settings">Settings</string>
	<string name="action_quit">Quit</string>
	<string name="main">Main</string>
	<string name="stats">Stats</string>
	<string name="manage">Manage</string>

	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="save_database">Save Database</string>
	<string name="restore_database">Restore Database</string>
	<string name="clear_database">Clear Database</string>
	<string name="clear_database_question">Are you sure you want to clear the database ?</string>
	<string name="are_you_sure">Are you sure ?</string>
	<string name="yes">YES</string>
	<string name="no">NO</string>
	<string name="summary_thing_taken">Default is \"pill\", could be \"cigarette\" or \"chocolate\"</string>
	<string name="summary_time_limit">Please provide in minutes</string>
	<string name="summary_update_time">Please provide in minutes</string>
	<string name="title_update_time">Update time for notification</string>
	<string name="title_time_limit">Time between take</string>
	<string name="title_thing_taken">Thing taken</string>
	<string name="current">Current take</string>
	<string name="day_stats">Day stats : %s</string>
	<string name="bad_take">Bad take</string>
	<string name="good_take">Good take</string>
</resources>
